--- a/Grocerytron/Views/Home/Index.cshtml
+++ b/Grocerytron/Views/Home/Index.cshtml
@@ -1,24 +1,29 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+﻿@model IEnumerable<Grocerytron.Models.List>
+@{
+    ViewBag.Title = "Home Page";
+}
+@section Scripts {
+    <script src="~/js/controllers/ListController.js"></script>
+}
+
+<div ng-controller="ListController">
+    <div class="container lists">
+        <div class="row">
+            <div class="col-md-12 clearfix lists-header">
+                <h1 class="pull-left">Your Lists</h1>
+                <a href="/edit.html" class="btn btn-primary pull-right btn-new-list">New List</a>
+            </div>
+            <div class="progress progress-striped active" ng-show="isBusy">
+                <div class="progress-bar progress-bar-info" style="width:100%"></div>
+            </div> 
+        </div>
+        <div class="row" ng-repeat="list in data">
+            <div class="col-md-4 list-container">
+                <div class="well">
+                    <h2><a href="edit.html">{{ list.title }}</a> <i class="icon-trash list-delete" title="Click to delete list"></i></h2>
+                    <span class="item-count">Items: {{ list.items.length }}</span>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
