--- a/Grocerytron/Views/Shared/_Layout.cshtml
+++ b/Grocerytron/Views/Shared/_Layout.cshtml
@@ -53,6 +53,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     @Scripts.Render("~/bundles/jquery")
     <script src="~/Scripts/angular.min.js"></script>
+    <script src="~/Scripts/angular-route.js"></script>
     <script src="~/js/app.js"></script>
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
